name:           HoxCluster
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2014
copyright:      Christian Hoener zu Siederdissen, 2014
homepage:       http://www.tbi.univie.ac.at/~choener/
maintainer:     choener@tbi.univie.ac.at
category:       Bioinformatics
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.8.0
synopsis:
                Hox gene clustering
description:
                Determine the most likely order of genes in a Hox cluster.
                .
                Apart from being an interesting problem in computational
                biology, it also serves as an example problem for dynamic
                programming over unordered sets. The theory and this
                application is described in this paper:
                .
                @
                Christian Hoener zu Siederdissen, Sonja J. Prohaska, and Peter F. Stadler
                Dynamic Programming for Set Data Types
                submitted
                @
                <<http://www.tbi.univie.ac.at/~choener/setgram/>>
                .



Extra-Source-Files:
  README.md
  changelog.md

library
  build-depends:
    ADPfusion         == 0.3.*    ,
    FormalGrammars    == 0.1.*    ,
    HamiltonianPaths  == 0.0.*    ,
    template-haskell              ,
    base              == 4.*
  exposed-modules:
    BioInf.HoxCluster
  ghc-options:
    -O2 -funbox-strict-fields

executable HoxCluster
  build-depends:
    ADPfusion         ,
    base
  hs-source-dirs:
    src
  main-is:
    HoxCluster.hs
  ghc-options:
    -O2
    -fcpr-off
    -funbox-strict-fields
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000
    -fllvm
    -optlo-O3 -optlo-std-compile-opts
    -fllvm-tbaa

source-repository head
  type: git
  location: git://github.com/choener/HoxCluster

