name:           HoxCluster
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2014 - 2015
copyright:      Christian Hoener zu Siederdissen, 2014 - 2015
homepage:       https://github.com/choener/HoxCluster
bug-reports:    https://github.com/choener/HoxCluster/issues
maintainer:     choener@tbi.univie.ac.at
category:       Bioinformatics
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
synopsis:
                Hox gene clustering
description:
                Determine the most likely order of genes in a Hox cluster.
                .
                Apart from being an interesting problem in computational
                biology, it also serves as an example problem for dynamic
                programming over unordered sets with interfaces.



Extra-Source-Files:
  README.md
  changelog.md



library
  build-depends: base             >= 4.7    && < 4.9
               --
               , ADPfusion        == 0.5.2.*
               , FormalGrammars   == 0.3.1.*
               , PrimitiveArray   == 0.7.1.*
  exposed-modules:
    BioInf.HoxCluster
    BioInf.HoxCluster.ScoreMat
  default-extensions: BangPatterns
                    , TemplateHaskell
                    , QuasiQuotes
  default-language:
    Haskell2010
  ghc-options:
    -O2 -funbox-strict-fields



executable HoxCluster
  build-depends: base
               , ADPfusion
  hs-source-dirs:
    src
  default-extensions: BangPatterns
  main-is:
    HoxCluster.hs
  default-language:
    Haskell2010
  ghc-options:
    -O2



source-repository head
  type: git
  location: git://github.com/choener/HoxCluster

