name:           HoxCluster
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2017
copyright:      Christian Hoener zu Siederdissen, 2017
homepage:       https://github.com/choener/HoxCluster
bug-reports:    https://github.com/choener/HoxCluster/issues
maintainer:     choener@bioinf.uni-leipzig.de
category:       Bioinformatics
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
synopsis:       Hox gene clustering
description:
                Determine the most likely order of genes in a Hox cluster.
                .
                Apart from being an interesting problem in computational
                biology, it also serves as an example problem for dynamic
                programming over unordered sets with interfaces.



Extra-Source-Files:
  README.md
  changelog.md



library
  build-depends: base             >= 4.7    &&  < 5.0
               , log-domain       >= 0.10
               , text             >= 1.0
               , vector           >= 0.11
               --
               , ADPfusion        == 0.5.2.*
               , ADPfusionSet     == 0.0.0.*
               , FormalGrammars   == 0.3.1.*
               , PrimitiveArray   == 0.8.0.*
  exposed-modules:
    BioInf.HoxCluster
    BioInf.HoxCluster.ScoreMat
  default-extensions: BangPatterns
                    , FlexibleContexts
                    , GADTs
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , QuasiQuotes
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
  default-language:
    Haskell2010
  ghc-options:
    -O2 -funbox-strict-fields



executable HoxCluster
  build-depends: base
               --
               , HoxCluster
  hs-source-dirs:
    src
  default-extensions: BangPatterns
  main-is:
    HoxCluster.hs
  default-language:
    Haskell2010
  ghc-options:
    -O2



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , CPP
                    , FlexibleContexts
                    , FlexibleInstances
                    , MultiParamTypeClasses
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
  build-depends: base
               , QuickCheck
               , tasty                        >= 0.11
               , tasty-quickcheck             >= 0.8
               , tasty-th                     >= 0.1
               , vector
               --
               , HoxCluster


source-repository head
  type: git
  location: git://github.com/choener/HoxCluster

